--- a/DemoWE/Views/Requests/Create.cshtml
+++ b/DemoWE/Views/Requests/Create.cshtml
@@ -11,12 +11,12 @@
 
 <div class="row">
     <div class="col-md-4">
-        <button id="createButton" class="btn btn-primary">Create New Task</button>
+        <button id="createButton" class="btn btn-primary">Create New request</button>
         <div id="createModal" class="modal" tabindex="-1" role="dialog">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title">Create Task</h5>
+                        <h5 class="modal-title">Create request</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
