--- a/DemoWE/Views/Requests/Details.cshtml
+++ b/DemoWE/Views/Requests/Details.cshtml
@@ -6,215 +6,120 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
-<style>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" />
 
+<style>
     .card-body {
         margin-bottom: 20px;
     }
 
-    dl.row {
-        display: flex;
-        flex-wrap: wrap;
+    .card-header h4 {
+        margin-bottom: 0;
     }
 
-        dl.row dt,
-        dl.row dd {
-            flex-basis: 50%;
-            padding: 10px;
+    .button-group {
+        margin-top: 20px;
+    }
+
+        .button-group button {
+            margin-right: 10px;
         }
 
+    .details-section {
+        margin-bottom: 20px;
     }
 </style>
 
-
-
 <div class="container-fluid">
-
-
-
     <div class="row">
-        <div class="col-md-6 offset-md-7">
+        <div class="col-md-12">
             <div class="card mb-4">
                 <div class="card-header">
-                    <h4 class="card-title mb-0">@Html.DisplayFor(model => model.RequestTitle)</h4>
+                    <h4 class="card-title">@Html.DisplayFor(model => model.RequestTitle)</h4>
                 </div>
                 <div class="card-body">
-                    <p>@Html.DisplayFor(model => model.RequestDescription)</p>
-                    <dl class="row">
-                        <div class="col-sm-6">
-                            <dt>Status</dt>
-                            <dd>@Html.DisplayFor(model => model.Status)</dd>
-                            <dt>StartDate</dt>
-                            <dd>@Html.DisplayFor(model => model.StartDate)</dd>
-                            <dt>Deadline</dt>
-                            <dd>@Html.DisplayFor(model => model.Deadline)</dd>
-                        </div>
-                        <div class="col-sm-6">
-                            <dt>CreatedBy</dt>
-                            <dd>@Html.DisplayFor(model => model.CreatedBy)</dd>
-                            @* <dt>AssignedTo</dt>
-                            <dd>@Html.DisplayFor(model => model.AssignedTo)</dd>
-                            <dt>Priority</dt>
-                            <dd>@Html.DisplayFor(model => model.Priority)</dd> *@
-
-                        </div>
-                        @*create checkox here*@
-
-                        <div class="col-sm-6" id="checkboxSection">
-                            <dt>Checkboxes</dt>
-                            <dd id="checkboxList">
-                                <!-- Existing checkboxes will be added here -->
-                            </dd>
-                            <button onclick="addCheckbox()">Add Checkbox</button>
-                        </div>
-
-
-
-                        <div>
-                            <h4 class="card-title mb-0"> Uploaded files</h4>
-                        </div>
-                    </dl>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-6">
-            <div class="card">
-                <div class="card-header">
-                    Chat
-                </div>
-            </div>
-            <div class="card-body">
-                <!-- Add your chat UI here -->
-                <ul class="list-unstyled mb-0">
-                    <li class="media">
-                        <img src="https://api.adorable.io/avatars/50/abott@adorable.png" class="mr-3 rounded-circle" alt="avatar">
-                        <div class="media-body">
-                            <h6 class="mt-0 mb-1">Abott</h6>
-                            Hello, how are you?
-                        </div>
-                    </li>
-                    <li class="media my-3">
-                        <img src="https://api.adorable.io/avatars/50/jacobs@adorable.png" class="mr-3 rounded-circle" alt="avatar">
-                        <div class="media-body">
-                            <h6 class="mt-0 mb-1">Jacobs</h6>
-                            I'm fine, thank you!
-                        </div>
-                    </li>
-                </ul>
-            </div>
-            <div class="card-footer">
-                <form class="form-inline">
-                    <div class="input-group">
-                        <input type="text" class="form-control form-control-sm" placeholder="Type your message here...">
-                        <div class="input-group-append">
-                            <button class="btn btn-primary btn-sm" type="submit">Send</button>
-                        </div>
+                    <div class="details-section">
+                        <strong>Description:</strong>
+                        <p>@Html.DisplayFor(model => model.RequestDescription)</p>
                     </div>
-                </form>
+                    <div class="details-section">
+                        <dl class="row">
+                            <div class="col-sm-6">
+                                <dt>Status:</dt>
+                                <dd>@Html.DisplayFor(model => model.Status)</dd>
+                                <dt>Start Date:</dt>
+                                <dd>@Html.DisplayFor(model => model.StartDate)</dd>
+                            </div>
+                            <div class="col-sm-6">
+                                <dt>Created By:</dt>
+                                <dd>@Html.DisplayFor(model => model.CreatedBy)</dd>
+                            </div>
+                        </dl>
+                    </div>
+                </div>
+                <div class="card-footer">
+                    <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+                    @if ((int)ViewData["UserRole"] == 0 || (int)ViewData["UserRole"] == 2)
+                    {
+                        <div class="button-group">
+                            <button id="escalateButton" data-request-id="@Model.RequestID" class="btn btn-danger">Escalate</button>
+                            <button id="rejectButton" data-request-id="@Model.RequestID" class="btn btn-warning">Reject</button>
+                            <button id="acceptButton" data-request-id="@Model.RequestID" class="btn btn-success">Accept</button>
+                        </div>
+                    }
+                    <a asp-action="Edit" asp-route-id="@Model?.RequestID" class="btn btn-primary">Edit</a>
+                </div>
             </div>
         </div>
     </div>
 </div>
 
+@section Scripts {
+    <script>
+        $(document).ready(function () {
+            // Handle Escalate button click
+            $('#escalateButton').on('click', function () {
+                var requestId = $(this).data('request-id');
+                updateRequestStatus(requestId, 'Escalated');
+            });
 
+            // Handle Reject button click
+            $('#rejectButton').on('click', function () {
+                var requestId = $(this).data('request-id');
+                updateRequestStatus(requestId, 'Rejected');
+            });
 
+            // Handle Accept button click
+            $('#acceptButton').on('click', function () {
+                var requestId = $(this).data('request-id');
+                updateRequestStatus(requestId, 'Accepted');
+            });
 
-
-<div class="card mt-4">
-    <div class="card-header">
-        Checkboxes
-    </div>
-</div>
-
-<div class="card-footer">
-    <a asp-action="Edit" asp-route-id="@Model?RequestID" class="btn btn-primary float-right">Edit</a>
-    <a asp-action="Index" class="btn btn-secondary">Back to List</a>
-</div>
-
-
-
-<script>
-    // Counter to keep track of checkbox IDs
-    let checkboxCounter = 1;
-
-    // Function to add a new checkbox
-    function addCheckbox() {
-        const checkboxName = prompt("Enter checkbox name:");
-        if (checkboxName) {
-            const checkboxId = `checkbox_${checkboxCounter++}`;
-            const checkboxHtml = `
-                        <div>
-                            <input type="checkbox" id="${checkboxId}" name="checkboxes" value="${checkboxName}">
-                            <label for="${checkboxId}">${checkboxName}</label>
-                            <button onclick="deleteCheckbox('${checkboxId}')">Delete</button>
-                        </div>
-                    `;
-            document.getElementById("checkboxList").innerHTML += checkboxHtml;
-        }
-    }
-
-    // Function to delete a checkbox
-    function deleteCheckbox(checkboxId) {
-        const checkboxElement = document.getElementById(checkboxId);
-        if (checkboxElement) {
-            checkboxElement.parentElement.remove();
-        }
-    }
-</script>
-
-
-@* <h1>Details</h1>
-
-<div>
-    <h4>Request</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.RequestTitle)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.RequestTitle)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.RequestDescription)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.RequestDescription)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Rfile)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Rfile)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Status)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Status)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.StartDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.StartDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Deadline)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Deadline)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreatedBy)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreatedBy)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.RequestID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
- *@
+            // Function to update request status via AJAX
+            function updateRequestStatus(requestId, status) {
+                $.ajax({
+                    url: '/Requests/UpdateStatus/' + requestId,
+                    type: 'POST',
+                    data: { id: requestId, status: status },
+                    success: function (response) {
+                        if (response.success) {
+                            // Update UI or show success message
+                            console.log(response.message);
+                            // Notify the user
+                            toastr.success(response.message);
+                            // You can update the status displayed on the page here if needed
+                        } else {
+                            // Show error message
+                            toastr.error("Error: " + response.message);
+                        }
+                    },
+                    error: function () {
+                        // Show error message
+                        toastr.error("An error occurred while processing the request.");
+                    }
+                });
+            }
+        });
+    </script>
+}
