--- a/DemoWE/Views/Requests/Index.cshtml
+++ b/DemoWE/Views/Requests/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Request</h1>
 <p>
     <!-- Link to trigger modal removed -->
     <button id="createButton" class="btn btn-primary">Create New</button>
@@ -19,8 +19,8 @@
             <th>
                 @Html.DisplayNameFor(model => model.RequestDescription)
             </th>
-         @*    <th>
-                @Html.DisplayNameFor(model => model.Rfile)
+            @*    <th>
+            @Html.DisplayNameFor(model => model.Rfile)
             </th> *@
             <th>
                 @Html.DisplayNameFor(model => model.Status)
@@ -28,60 +28,61 @@
             <th>
                 @Html.DisplayNameFor(model => model.StartDate)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Deadline)
-            </th>
-          @*   <th>
-                @Html.DisplayNameFor(model => model.CreatedBy)
+            @* <th>
+            @Html.DisplayNameFor(model => model.Deadline)
+            </th> *@
+            @*   <th>
+            @Html.DisplayNameFor(model => model.CreatedBy)
             </th> *@
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.RequestTitle)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.RequestDescription)
-            </td>
-            @* <td>
-                @Html.DisplayFor(modelItem => item.Rfile)
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.RequestTitle)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.RequestDescription)
+                </td>
+                @* <td>
+            @Html.DisplayFor(modelItem => item.Rfile)
             </td> *@
-            <td>
-                @Html.DisplayFor(modelItem => item.Status)
-            </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Status)
+                </td>
                 <td>@item.StartDate.ToShortDateString()</td>
-                <td>@item.Deadline.ToShortDateString()</td>
-            @* <td>
-                @Html.DisplayFor(modelItem => item.CreatedBy)
+                @*  <td>@item.Deadline.ToShortDateString()</td> *@
+                @* <td>
+            @Html.DisplayFor(modelItem => item.CreatedBy)
             </td> *@
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.RequestID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.RequestID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.RequestID">Delete</a>
-            </td>
-        </tr>
-}
+                <td>
+                    @*                 <a asp-action="Edit" asp-route-id="@item.RequestID">Edit</a> |
+                *@                <a asp-action="Details" asp-route-id="@item.RequestID">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.RequestID">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
 
-               
+
 <div class="row">
     <div class="col-md-4">
         <div id="createModal" class="modal" tabindex="-1" role="dialog">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title">Create Task</h5>
+                        <h5 class="modal-title">Create request</h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
                     <div class="modal-body">
                         <!-- Partial view for Create Task form -->
-                        @await Html.PartialAsync("_CreatePartial", new Request()) 
+                        @await Html.PartialAsync("_CreatePartial", new Request())
                     </div>
                 </div>
             </div>
