--- a/DemoWE/Views/Projects/Index.cshtml
+++ b/DemoWE/Views/Projects/Index.cshtml
@@ -35,11 +35,7 @@
 <h2>@ViewBag.name projects </h2>
 <p>
     <!-- Link to trigger modal removed -->
-     @if (ViewBag.Role == 2)
-    {
-        <button id="createButton" class="btn btn-primary">Create New</button>
-    }
-   
+  
 </p>
 
 <table>
@@ -53,7 +49,13 @@
             <th>@Html.DisplayNameFor(model => model.Priority)</th>
             <th>@Html.DisplayNameFor(model => model.AssignedDepartmentID)</th>
             <th>@Html.DisplayNameFor(model => model.Status)</th>
-            <th> <button id="createButton" class="btn" style="font-size: 15px;">Create</button></th>
+            <th>
+                @if (ViewBag.Role == 2)
+                {
+                    <button id="createButton" class="btn" style="font-size: 15px;">Create </button>
+                }
+            </th>
+          
         </tr>
     </thead>
     <tbody>
