--- a/DemoWE/Views/Requests/_CreatePartial.cshtml
+++ b/DemoWE/Views/Requests/_CreatePartial.cshtml
@@ -4,6 +4,7 @@
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
     <div class="form-group">
+      <p> @ViewBag.Role</p
         <label asp-for="RequestTitle" class="control-label"></label>
         <input asp-for="RequestTitle" class="form-control" />
         <span asp-validation-for="RequestTitle" class="text-danger"></span>
