--- a/DemoWE/Views/STasks/Index.cshtml
+++ b/DemoWE/Views/STasks/Index.cshtml
@@ -13,6 +13,7 @@
         <button id="createButton" class="btn btn-primary">Create New</button>
 
     @* }  *@
+    <a asp-controller="STask" asp-action="Details" asp-route-id="100126">details</a>
 </p>
 
 
