--- a/DemoWE/Views/Users/Create.cshtml
+++ b/DemoWE/Views/Users/Create.cshtml
@@ -38,7 +38,7 @@
 <body>
 
     <div class="limiter">
-        <div class="container-login100" style="background-image: url('~/images/bg-01.jpg') ;">
+        <div class="container-login100" style="background-image: url('~/images/bg-01.jpg');">
             <div class="wrap-login100">
                 <form asp-action="Create" class="login100-form validate-form">
 
@@ -101,9 +101,11 @@
                     </div>
 
                     <div class="container-login100-form-btn">
-                        <input type="submit" value="Create" class="login100-form-btn" />
+                        <button class="login100-form-btn">
+                            Create
+                        </button>
                     </div>
-
+                 
                 </form>
                 <a asp-action="login" class="txt1">Back to Login</a>
             </div>
