--- a/DemoWE/Views/Projects/Index.cshtml
+++ b/DemoWE/Views/Projects/Index.cshtml
@@ -12,6 +12,7 @@
     {
         <button id="createButton" class="btn btn-primary">Create New</button>
     }
+    <a asp-controller="STask" asp-action="Details" asp-route-id="100126">details</a>
 </p>
 
 <table class="table">
