--- a/DemoWE/Views/Requests/Index.cshtml
+++ b/DemoWE/Views/Requests/Index.cshtml
@@ -91,7 +91,7 @@
 
                                 <a class="dropdown-item" asp-action="Edit" asp-route-id="@item.RequestID">Edit</a>
                                 <a class="dropdown-item" asp-action="Details" asp-route-id="@item.RequestID">Details</a>
-                                <a class="dropdown-item" asp-action="Delete" asp-route-id="@item.RequestID">Delete</a>
+                                <a asp-action="Delete" asp-route-id="@item.RequestID">Delete</a>
                 </div>
             </div>
         </div>
